--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         conference's short video here</a>.</p>
   </section>
   <section class="jumbotron"
-    style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size: cover;">
+    style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.png') center fixed no-repeat; background-size: cover;">
     <div class="container">
       <h1 class="px-5" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart and Innovative Agriculture</span></h1>
       <h5 class="px-5" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”</h5>
-      <p class="px-5" style="text-align: left">22–23 November 2022</p>
+      <p class="px-5" style="text-align: left">Yogyakarta, Indonesia. 22–23 November 2022</p>
     </div>
   </section>
   <section class="container py-5">
@@ -105,7 +105,7 @@
             <a href="article/smart-and-precision-farming.html">Smart and Precision Farming symposium</a>; 
             <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management and Utilization symposium; and 
             <a href="article/sustainable-food-production.html">Sustainable Food Production symposium</a>.</p>
-          <p>The accepted and presented papers <b>will be submitted for possible inclusion to</b> journals/proceedings that are indexed by Scopus/CPCI/DOAJ: <a href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.
+          <p>The accepted and presented papers <b>will be submitted for possible inclusion to</b> proceedings that are indexed by Scopus/CPCI/DOAJ: <a href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.
           </p>
         </div>
       </div>
@@ -245,7 +245,7 @@
         Website has been developed by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a>, with
         contribution from Lerissa and redeveloped by
         <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using <a target="_blank"
-          href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha1</a>, and licenced as <a rel="license"
+          href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>, and licenced as <a rel="license"
           target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, <a target="_blank"
           href="https://github.com/bppugm/icosia-2022/blob/master/LICENSE.md">unless otherwise stated</a>.
         UGM and ICoSIA logos © Universitas Gadjah Mada. Icons by <a target="_blank" href="http://fontawesome.io">Font
