--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         conference's short video here</a>.</p>
   </section>
   <section class="jumbotron"
-    style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.png') center fixed no-repeat; background-size: cover;">
+    style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size: cover;">
     <div class="container">
       <h1 class="px-5" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart and Innovative Agriculture</span></h1>
       <h5 class="px-5" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”</h5>
@@ -240,17 +240,15 @@
       <hr class="mx-auto my-3" style="border-color: #ccc;">
 
       <!-- Credits -->
-      <p class="text-muted text-justify">The International Conference on Smart and Innovative Technology 2022, organized by <a
-          target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
-        Website has been developed by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a>, with
-        contribution from Lerissa and redeveloped by
-        <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using <a target="_blank"
-          href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>, and licenced as <a rel="license"
-          target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, <a target="_blank"
-          href="https://github.com/bppugm/icosia-2022/blob/master/LICENSE.md">unless otherwise stated</a>.
-        UGM and ICoSIA logos © Universitas Gadjah Mada. Icons by <a target="_blank" href="http://fontawesome.io">Font
-          Awesome 6.2.1</a> (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i
-            class="fab fa-creative-commons-pd-alt"></i></a>).
+      <p class="text-muted text-justify">The International Conference on Smart and Innovative Technology 2022, 
+        organized by <a target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
+        Website has been redeveloped by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using 
+        <a target="_blank" href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>, 
+        and licenced as <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, 
+        <a target="_blank" href="https://github.com/bppugm/icosia-2022">unless otherwise stated</a>.
+        UGM and ICoSIA logos © Universitas Gadjah Mada. 
+        Icons by <a target="_blank" href="http://fontawesome.io">Font Awesome 6.2.1</a> 
+        (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i class="fab fa-creative-commons-pd-alt"></i></a>).
         Website © 2023 <a target="_blank" href="https://publikasi.ugm.ac.id/en/">Badan Penerbit dan Publikasi UGM</a>.
       </p>
     </div>
