--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
 <body class="index">
 
   <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="images/logos/logo.svg" width="100px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/fees.html">Fee</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/programs.html">Program</a></li>
+          <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
+        </ul>
+      </div>
+      <button class="btn btn-success" disabled>Register</button>
+    </div>
+  </nav>
   <nav class="bg-primary py-1">
     <div class="container d-flex flex-wrap">
       <span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 22–23 November 2022</span>
