--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700,800" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/ec86317081.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/985103748a.js" crossorigin="anonymous"></script>
 
   <!-- CSS -->
-  <link href="stylesheets/site.css" rel="stylesheet" />
+  <link href="stylesheets/bootstrap.css" rel="stylesheet" />
   <link href="stylesheets/custom.css" rel="stylesheet" />
 
   <!-- JAVASCRIPT -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="javascripts/all.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="javascripts/bootstrap.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113279197-1"></script>
   <script src="javascripts/gtag.js"></script>
@@ -39,64 +39,51 @@
 
 <body class="index">
 
+  <header style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="images/logos/logo.svg" width="100px"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/fees.html">Fee</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/programs.html">Program</a></li>
-          <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
-        </ul>
-      </div>
-      <button class="btn btn-success" disabled>Register</button>
-    </div>
-  </nav>
-  <nav class="bg-primary py-1">
-    <div class="container d-flex flex-wrap">
-      <span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 22–23 November 2022</span>
+  <nav class="navbar bg-primary pt-1">
+    <div class="container">
+      <a class="navbar-brand"><span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 22–23 November 2022</span></a>
       <ul class="nav">
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://twitter.com/icosiaugm" target="_blank"><i class="fab fa-twitter fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icosiaugm</span></a></li>
+            href="https://twitter.com/icosiaugm" target="_blank"><i class="fab fa-twitter fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://instagram.com/icosiaugm" target="_blank"><i class="fab fa-instagram fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icosiaugm</span></a></li>
+            href="https://instagram.com/icosiaugm" target="_blank"><i class="fab fa-instagram fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
             href="https://www.youtube.com/@icosiaugm5757" target="_blank"><i
-              class="fab fa-youtube fa-lg"></i><span class="d-lg-none d-sm-block"> YouTube</span></a></li>
+              class="fab fa-youtube fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="mailto:icosia@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icosia@ugm.ac.id</span></a></li>
+            href="mailto:icosia@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i></a></li>
       </ul>
     </div>
   </nav>
-  <header class="py-3" style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
-    <div class="container d-flex flex-wrap justify-content-center">
-      <a class="d-flex align-items-center me-lg-auto"><img src="images/logos/logo.svg" width="100px"></a>
-      <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/fees.html">Fee</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/programs.html">Program</a></li>
-        <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
-      </ul>
-      <!-- REGISTER -->
-      <a class="px-3" href="article/submissions.html"><button type="button"
-          class="btn btn-success">Register</button></a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand"><img src="images/logos/logo.svg" width="100px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbar2Label">ICoSIA 2022</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item"><a class="nav-link" href="article/about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/satellite-events.html">Satellite events</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/speakers.html">Speakers</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/author-guidelines.html">Author</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/fees.html">Fee</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/programs.html">Program</a></li>
+            <li class="nav-item"><a class="nav-link" href="article/venue.html">Venue</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
+          </ul>
+        </div>
+      </div>
+      <button class="btn btn-success nav-register" disabled>Register</button>
     </div>
+  </nav>
   </header>
 
   <!-- CONTENTS -->
@@ -108,9 +95,9 @@
   <section class="jumbotron"
     style="height:100vh; margin-top:-5rem; background: url('images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size: cover;">
     <div class="container">
-      <h1 class="px-5" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart and Innovative Agriculture</span></h1>
-      <h5 class="px-5" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”</h5>
-      <p class="px-5" style="text-align: left">Yogyakarta, Indonesia. 22–23 November 2022</p>
+      <h1 class="px-3" style="padding-top:25vh; text-align: left; font-size: 50px;">The 3<sup style="text-transform: lowercase;">rd</sup> International Conference on<br><span style="color: #40bb6a">Smart and Innovative Agriculture</span></h1>
+      <h5 class="px-3" style="text-align: left;">“Digital transformation, technology, and its solution for agriculture”</h5>
+      <p class="px-3" style="text-align: left">Yogyakarta, Indonesia. 22–23 November 2022</p>
     </div>
   </section>
   <section class="container py-5">
@@ -156,7 +143,7 @@
     <div class="bg-pattern-icosia pt-5 px-5 rounded">
       <div class="container">
         <div class="row py-1">
-          <div class="col-md-3 p-5">
+          <div class="col-md-3">
             <h3 class="pb-3">Speakers</h3>
             <p>The conference invited speakers to enliven plenary and parallel sessions from various countries.</p>
             <a href="article/speakers.html"><button type="button" class="btn btn-success">Show all speakers</button></a>
@@ -268,7 +255,7 @@
         and licenced as <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, 
         <a target="_blank" href="https://github.com/bppugm/icosia-2022">unless otherwise stated</a>.
         UGM and ICoSIA logos © Universitas Gadjah Mada. 
-        Icons by <a target="_blank" href="http://fontawesome.io">Font Awesome 6.2.1</a> 
+        Icons by <a target="_blank" href="https://fontawesome.com/docs/changelog/">Font Awesome 6.4.0</a> 
         (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i class="fab fa-creative-commons-pd-alt"></i></a>).
         Website © 2023 <a target="_blank" href="https://publikasi.ugm.ac.id/en/">Badan Penerbit dan Publikasi UGM</a>.
       </p>
