--- a/article/about.html
+++ b/article/about.html
@@ -4,25 +4,27 @@
 <head>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta charset="utf-8">
-  <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+  <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+    name="viewport">
 
-  <title>About the conference - ICST 2021</title>
+  <title>ICoSIA 2022</title>
 
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700,800" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/ec86317081.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/985103748a.js" crossorigin="anonymous"></script>
 
   <!-- CSS -->
-  <link href="../stylesheets/site.css" rel="stylesheet" />
+  <link href="../stylesheets/bootstrap.css" rel="stylesheet" />
   <link href="../stylesheets/custom.css" rel="stylesheet" />
 
   <!-- JAVASCRIPT -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="../javascripts/all.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="../javascripts/bootstrap.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113279197-1"></script>
   <script src="../javascripts/gtag.js"></script>
+
 
   <!-- FAVICON -->
   <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png">
@@ -35,45 +37,54 @@
 
 </head>
 
+<body class="index">
+
+  <header style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
   <!-- NAVBAR -->
-  <nav class="bg-primary py-1">
-    <div class="container d-flex flex-wrap">
-      <span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 7–8 September 2021</span>
+  <nav class="navbar bg-primary pt-1">
+    <div class="container">
+      <a class="navbar-brand"><span class="nav me-auto pt-1" style="color: #fff; font-size: 9pt">Yogyakarta, Indonesia. 22–23 November 2022</span></a>
       <ul class="nav">
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://twitter.com/icstugm" target="_blank"><i class="fab fa-twitter fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icstugm</span></a></li>
+            href="https://twitter.com/icosiaugm" target="_blank"><i class="fab fa-twitter fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://instagram.com/icstugm" target="_blank"><i class="fab fa-instagram fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icstugm</span></a></li>
+            href="https://instagram.com/icosiaugm" target="_blank"><i class="fab fa-instagram fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://www.youtube.com/channel/UCQU0DiHt6DhN3h9ojnBId7Q" target="_blank"><i
-              class="fab fa-youtube fa-lg"></i><span class="d-lg-none d-sm-block"> YouTube</span></a></li>
+            href="https://www.youtube.com/@icosiaugm5757" target="_blank"><i
+              class="fab fa-youtube fa-lg"></i></a></li>
         <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="https://flic.kr/icst" target="_blank"><i class="fab fa-flickr fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icst</span></a></li>
-        <li class="nav-item"><a class="py-2 px-2 nav-primary" style="color:#fff; font-size: 7pt;"
-            href="mailto:icst@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i><span
-              class="d-lg-none d-sm-block"> icst@ugm.ac.id</span></a></li>
+            href="mailto:icosia@ugm.ac.id" target="_blank"><i class="fas fa-envelope fa-lg"></i></a></li>
       </ul>
     </div>
   </nav>
-  <header class="py-3" style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
-    <div class="container d-flex flex-wrap justify-content-center">
-      <a class="d-flex align-items-center me-lg-auto"><img src="../images/logos/logo.svg" width="100px"></a>
-      <ul class="nav">
-        <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="satellite-events.html">Satellite events</a></li>
-        <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-        <li class="nav-item"><a class="nav-link" href="fees.html">Fee</a></li>
-        <li class="nav-item"><a class="nav-link" href="programs.html">Program</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://icstugm.tawk.help/">Help</a></li>
-      </ul>
-      <!-- REGISTER -->
-      <a class="px-3" href="submissions.html"><button type="button"
-          class="btn btn-success">Register</button></a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+      <a class="navbar-brand"><img src="../images/logos/logo.svg" width="100px"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbar2Label">ICoSIA 2022</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/satellite-events.html">Satellite events</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/speakers.html">Speakers</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/author-guidelines.html">Author</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/fees.html">Fee</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/programs.html">Program</a></li>
+            <li class="nav-item"><a class="nav-link" href="../article/venue.html">Venue</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
+          </ul>
+        </div>
+      </div>
+      <button class="btn btn-success nav-register" disabled>Register</button>
     </div>
+  </nav>
   </header>
   
   <!-- CONTENTS -->
@@ -208,96 +219,89 @@
   </div>
   </p>
 </div>
-      
-      <!-- <p> -->
-        <!-- <b>Scientific and Editorial Boards:</b> -->
-        <!-- <div class="row"> -->
-          <!-- <div class="col-lg-6"> -->
-            <!-- Muhammad	Abdillah	(Universitas Pertamina, Indonesia)<br /> -->
-            <!-- </div> -->
-            <!-- </div> -->
-            <!-- </p> -->
-          </div>
+</div>
   </section>
       
   <!-- FOOTER -->
-  <footer class="footer px-5 pb-2" style="background-color: #f8f7fd; box-shadow: 0 1px 2px 0 #e1e5ea;">
+  <footer class="footer px-5 pb-2" style="background-color: #f4fcf7; box-shadow: 0 1px 2px 0 #e1e5ea;">
     <div class="container">
       <!-- Sponsors -->
       <div class="text-center pt-3">
         <img src="../images/logos/ugm.svg" class="px-3 my-2" style="filter: grayscale();" height="45px">
-        <img src="../images/publication/aip-logo.png" class="px-3 my-2" style="filter: grayscale();" height="45px">
-        <img src="../images/publication/scientificnet-logo.svg" class="px-3 my-2" style="filter: grayscale();" height="35px">
-        <img src="../images/publication/e3s-logo.svg" class="px-3 my-2" style="filter: grayscale();" height="35px">
-        <img src="../images/publication/scopus.svg" class="px-3 my-2" style="filter: grayscale();" height="35px">
-        <!-- <img src="images/publication/ajstd-logo.svg" class="px-3 my-2" style="filter: grayscale();" height="35px"> -->
+        <img src="../images/publication/atlantis-press.svg" class="px-3 my-2" style="filter: grayscale();" height="35px">
+        <img src="../images/publication/clarivate-analytics.svg" class="px-3 my-2" style="filter: grayscale();" height="40px">
       </div>
-      <hr class="mx-auto my-3" style="border-color: #e3e3f3;">
+      <hr class="mx-auto my-3" style="border-color: #ccc;">
 
       <!-- Footer nav -->
       <div class="row">
         <div class="col-md-3">
-          <h6 style="color: #40bb6a">The conference</h6>
+          <h6 style="color: #1f73cc">The conference</h6>
           <p>
-            <a href="about.html">About</a><br>
-            <a href="../index.html">Important dates</a><br>
-            <a href="speakers.html">Speakers</a><br>
-            <a href="fees.html">Fee</a><br>
-            <a href="programs.html">Program</a><br>
-            <a href="https://icstugm.tawk.help/">Help</a>
+            <a href="../article/about.html">About</a><br>
+            <a href="../../icosia-2022/index.html">Important dates</a><br>
+            <a href="../article/speakers.html">Speakers</a><br>
+            <a href="../article/about.html">Committees</a><br>
+            <a href="../article/fees.html">Fee</a><br>
+            <a href="../article/programs.html">Program</a><br>
+            <a href="https://icosiaugm.tawk.help/">Help</a>
           </p>
         </div>
         <div class="col-md-3">
-          <h6 style="color: #40bb6a">Satellite events</h6>
+          <h6 style="color: #1f73cc">Satellite events</h6>
           <p>
-            <a href="">CIT symposium</a><br>
-            <a href="">EPCCI symposium</a><br>
-            <a href="">2nd GEM symposium</a><br>
-            <a href="">LSMAC symposium</a><br>
-            <a href="">MIE symposium</a><br>
-            <a href="">RSG symposium</a>
+            <a href="../article/agricultural-big-data-analysis.html">ABDA symposium</a><br>
+            <a href="../article/agricultural-geography.html">AG symposium</a><br>
+            <a href="../article/land-and-environmental-management.html">LEM symposium</a><br>
+            <a href="../article/precision-nutrition-technology.html">PNT symposium</a><br>
+            <a href="../article/smart-and-precision-farming.html">SPF symposium</a><br>
+            <a href="../article/smart-genetics-resource-management-and-utilization.html">SGRMU symposium</a><br>
+            <a href="../article/sustainable-food-production.html">SFP symposium</a>
           </p>
         </div>
         <div class="col-md-3">
-          <h6 style="color: #40bb6a">Explore</h6>
+          <h6 style="color: #1f73cc">Author information</h6>
           <p>
+            <a href="../article/author-guidelines.html">Author guidelines</a><br>
+            <a href="../article/editorial-policy.html">Editorial policy</a><br>
+            <a href="../article/submissions.html">Submission</a><br>
+          </p>
+          <h6 style="color: #1f73cc">Explore</h6>
+          <p>
+            <a href="../article/venue.html">Conference venue</a><br>
             <a href="https://ugm.ac.id/en" target="_blank">Universitas Gadjah Mada</a><br>
             <a href="https://visitingjogja.jogjaprov.go.id/" target="_blank">The city of Yogyakarta</a>
           </p>
         </div>
         <div class="col-md-3">
-          <h6 style="color: #40bb6a">Connect</h6>
+          <h6 style="color: #1f73cc">Connect</h6>
           <p>
-            <i class="fa fa-envelope"></i> <a href="mailto:icst@ugm.ac.id" target="_blank"">icst@ugm.ac.id</a><br>
-          <i class=" fa fa-twitter"></i> <a href="https://www.twitter.com/icstugm" target="_blank">@icstugm</a><br>
-              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/icstugm"
-                target="_blank">icstugm</a><br>
+            <i class="fa fa-envelope"></i> <a href="mailto:icosia@ugm.ac.id" target="_blank">icosia@ugm.ac.id</a><br>
+          <i class=" fa fa-twitter"></i> <a href="https://www.twitter.com/icosiaugm" target="_blank">@icosiaugm</a><br>
+              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/icosiaugm" target="_blank">icosiaugm</a><br>
               <i class="fa fa-twitter"></i> <a href="https://www.twitter.com/bpp_ugm" target="_blank">@BPP_UGM</a><br>
-              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/ugmyogyakarta"
-                target="_blank">@UGMYogyakarta</a>
+              <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/ugmyogyakarta" target="_blank">@UGMYogyakarta</a>
           </p>
           <p>
-            <a href="https://icstugm.tawk.help/" target="_blank"><button type="button" class="btn btn-success"><i
-                  class="fa-solid fa-headset"></i>&nbsp;&nbsp;ICST UGM Helpdesk</button></a>
+            <a href="https://icosiaugm.tawk.help/" target="_blank"><button type="button" class="btn btn-success"><i
+                  class="fa-solid fa-headset"></i>&nbsp;&nbsp;ICoSIA UGM Helpdesk</button></a>
           </p>
         </div>
       </div>
 
-      <hr class="mx-auto my-3" style="border-color: #e3e3f3;">
+      <hr class="mx-auto my-3" style="border-color: #ccc;">
 
       <!-- Credits -->
-      <p class="text-muted text-justify">The International Conference on Science and Technology 2021, organized by <a
-          target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
-        Website has been developed by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a>, with
-        contribution from <a target="_blank" href="https://www.linkedin.com/in/anandatna">Thalia</a> and redeveloped by
-        <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using <a target="_blank"
-          href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha1</a>, and licenced as <a rel="license"
-          target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, <a target="_blank"
-          href="https://github.com/bppugm/icst-2021/blob/master/LICENSE.md">unless otherwise stated</a>.
-        UGM and ICST logos © Universitas Gadjah Mada. Icons by <a target="_blank" href="http://fontawesome.io">Font
-          Awesome 6.2.1</a> (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i
-            class="fab fa-creative-commons-pd-alt"></i></a>).
-        Website © 2022 <a target="_blank" href="https://publikasi.ugm.ac.id/en/">Badan Penerbit dan Publikasi UGM</a>.
+      <p class="text-muted text-justify">The International Conference on Smart and Innovative Technology 2022, 
+        organized by <a target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
+        Website has been redeveloped by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using 
+        <a target="_blank" href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>, 
+        and licenced as <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>, 
+        <a target="_blank" href="https://github.com/bppugm/icosia-2022">unless otherwise stated</a>.
+        UGM and ICoSIA logos © Universitas Gadjah Mada. 
+        Icons by <a target="_blank" href="https://fontawesome.com/docs/changelog/">Font Awesome 6.4.0</a> 
+        (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i class="fab fa-creative-commons-pd-alt"></i></a>).
+        Website © 2023 <a target="_blank" href="https://publikasi.ugm.ac.id/en/">Badan Penerbit dan Publikasi UGM</a>.
       </p>
     </div>
   </footer>
