update index page

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             <a href="article/land-and-environmental-management.html">Land and Environmental Management symposium</a>; 
             <a href="article/precision-nutrition-technology.html">Precision Nutrition Technology symposium</a>; 
             <a href="article/smart-and-precision-farming.html">Smart and Precision Farming symposium</a>; 
-            <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management and Utilization symposium; and 
+            <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management and Utilization symposium</a>; and 
             <a href="article/sustainable-food-production.html">Sustainable Food Production symposium</a>.</p>
           <p>The accepted and presented papers <b>will be submitted for possible inclusion to</b> proceedings that are indexed by Scopus/CPCI/DOAJ: <a href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.
           </p>
         </div>
       </div>
 
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-6" id="important-dates">
         <div class="p-4 mb-3 rounded" style="background-color: #cfe2ff; border-color: #b6d4fe;">
           <h6 style="color:#084298">Important dates</h6><br>
           <p style="color:#8d949d;">
@@ -193,9 +193,9 @@
           <h6 style="color: #1f73cc">The conference</h6>
           <p>
             <a href="article/about.html">About</a><br>
-            <a href="../icosia-2022/index.html">Important dates</a><br>
+            <a href="../icosia-2022/index.html#important-dates">Important dates</a><br>
             <a href="article/speakers.html">Speakers</a><br>
-            <a href="article/about.html">Committees</a><br>
+            <a href="article/about.html#advisor">Committees</a><br>
             <a href="article/fees.html">Fee</a><br>
             <a href="article/programs.html">Program</a><br>
             <a href="https://icosiaugm.tawk.help/">Help</a>
