update about page

--- a/article/about.html
+++ b/article/about.html
@@ -75,33 +75,26 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/about.html">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/satellite-events.html">Satellite events</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/speakers.html">Speakers</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/author-guidelines.html">Author</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/fees.html">Fee</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/programs.html">Program</a></li>
-              <li class="nav-item"><a class="nav-link" href="../article/venue.html">Venue</a></li>
+              <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="satellite-events.html">Satellite events</a></li>
+              <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
+              <li class="nav-item"><a class="nav-link" href="author-guidelines.html">Author</a></li>
+              <li class="nav-item"><a class="nav-link" href="fee.html">Fee</a></li>
+              <li class="nav-item"><a class="nav-link" href="program.html">Program</a></li>
+              <li class="nav-item"><a class="nav-link" href="venue.html">Venue</a></li>
               <li class="nav-item"><a class="nav-link" href="https://icosiaugm.tawk.help/">Help</a></li>
             </ul>
           </div>
         </div>
-        <button class="btn btn-success nav-register" disabled>Register</button>
+        <button class="btn btn-primary nav-register" disabled>Register</button>
       </div>
     </nav>
   </header>
 
-  <!-- CONTENTS -->
-  <!-- <section>
-    <p class="alert alert-info" style="text-align: center">🎉 ICST UGM 2021 has been wrapped up. Thank you for your
-      participation! <br><a class="alert-link" href=https://youtu.be/CzcjSkTaqcA" target="_blank">🎞 Watch the
-        conference's short video here</a>.</p>
-  </section> -->
-
-  <section class="jumbotron"
-    style="background: url('../images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size: cover;">
+  <section
+    style="background: url('../images/jumbotron/jumbotron.jpg') center fixed no-repeat; background-size:cover; height: fit-content;">
     <div class="container">
-      <div class="row row">
+      <div class="row">
         <div class="col-lg-6">
           <!-- INTRODUCTION -->
           <h1 id="about" style="text-align: left;">About <span style="color: #1f73cc;">IC<span
@@ -117,27 +110,27 @@
   <section class="container">
     <div class="row">
       <div class="col-md-4 d-flex align-items-end flex-column px-5 py-3">
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Previous IC<span
-              style="text-transform: lowercase;">o</span>SIA<i class="fa-solid fa-arrow-right"
-              style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Satellite events<i
+        <a href="https://bppugm.github.io/icosia-2021" target="_blank"><button type="button"
+            class="btn btn-transparent p-2">Previous IC<span style="text-transform: lowercase;">o</span>SIA<i
               class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Speakers<i class="fa-solid fa-arrow-right"
-              style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Author guidelines<i
+        <a href="satellite-events.html"><button type="button" class="btn btn-transparent p-2">Satellite events<i
               class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Editorial policy<i
+        <a href="speakers.html"><button type="button" class="btn btn-transparent p-2">Speakers<i
               class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Submission<i class="fa-solid fa-arrow-right"
-              style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Fee<i class="fa-solid fa-arrow-right"
-              style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Program<i class="fa-solid fa-arrow-right"
-              style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">Universitas Gadjah Mada<i
+        <a href="author-guidelines.html"><button type="button" class="btn btn-transparent p-2">Author guidelines<i
               class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
-        <a href="#"><button type="button" class="btn btn-transparent p-2">City of Yogyakarta<i
+        <a href="editorial-policy.html"><button type="button" class="btn btn-transparent p-2">Editorial policy<i
               class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
+        <a href="submission.html"><button type="button" class="btn btn-transparent p-2">Submission<i
+              class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
+        <a href="fee.html"><button type="button" class="btn btn-transparent p-2">Fee<i class="fa-solid fa-arrow-right"
+              style="padding-left: 5px;"></i></button></a>
+        <a href="program.html"><button type="button" class="btn btn-transparent p-2">Program<i
+              class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
+        <a href="https://ugm.ac.id/en"><button type="button" class="btn btn-transparent p-2">Universitas Gadjah Mada<i
+              class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
+        <a href="https://visitingjogja.jogjaprov.go.id/"><button type="button" class="btn btn-transparent p-2">City of
+            Yogyakarta<i class="fa-solid fa-arrow-right" style="padding-left: 5px;"></i></button></a>
       </div>
       <div class="col-md-8 pt-3">
         <h2 id="introduction">Introduction</h2>
@@ -171,23 +164,23 @@
           for researchers to present the latest research findings and describe emerging technologies and directions in
           agriculture.</p>
         <p>This year, the conference will take the theme “Digital transformation, technology, and its solution for
-          agriculture” with <a href="article/symposia.html">seven symposia</a>:
-          <a href="article/agricultural-big-data-analysis.html">Agricultural Big Data Analysis symposium</a>;
-          <a href="article/agricultural-geography.html">Agricultural Geography symposium</a>;
-          <a href="article/land-and-environmental-management.html">Land and Environmental Management symposium</a>;
-          <a href="article/precision-nutrition-technology.html">Precision Nutrition Technology symposium</a>;
-          <a href="article/smart-and-precision-farming.html">Smart and Precision Farming symposium</a>;
-          <a href="article/smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management
+          agriculture” with <a href="satellite-events.html">seven symposia</a>:
+          <a href="agricultural-big-data-analysis.html">Agricultural Big Data Analysis symposium</a>;
+          <a href="agricultural-geography.html">Agricultural Geography symposium</a>;
+          <a href="land-and-environmental-management.html">Land and Environmental Management symposium</a>;
+          <a href="precision-nutrition-technology.html">Precision Nutrition Technology symposium</a>;
+          <a href="smart-and-precision-farming.html">Smart and Precision Farming symposium</a>;
+          <a href="smart-genetics-resource-management-and-utilization.html">Smart Genetics Resource Management
             and Utilization symposium</a>; and
-          <a href="article/sustainable-food-production.html">Sustainable Food Production symposium</a>.
+          <a href="sustainable-food-production.html">Sustainable Food Production symposium</a>.
         </p>
         <h2 class="pt-3" id="publication">Publications</h2>
         <p>Authors are invited to electronically submit both of their full papers in English to the EDAS system. The
           submitted papers will be peer-reviewed based on relevance and timeliness, technical content and scientific
           rigor, novelty and originality, and their quality of presentation. The accepted and presented papers <b>will
             be submitted for possible inclusion to</b> proceedings that are indexed by Scopus/CPCI/DOAJ: <a
-            href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.<br><br>
-          <button class="btn btn-success" href="article/editorial-policy.html">Read editorial policy</button>
+            href="https://www.atlantis-press.com/proceedings/series/absr" target="_blank">Atlantis Press</a>.</p>
+          <a href="editorial-policy.html"><button class="btn btn-primary">Read editorial policy</button></a>
 
           <!-- COMMITTEE -->
         <h2 class="pt-3" id="advisor">Advisory boards</h2>
@@ -215,7 +208,7 @@
               src="../images/icons/scopus.svg" alt="Scopus" width="16" height="16" /></a><br>
           Dr. Pramaditya Wicaksono, S.Si., M.Sc. (<em>Universitas Gadjah Mada, Indonesia</em>) <a
             href="https://www.scopus.com/authid/detail.uri?authorId=54279699900" target="" rel="noopener"><img
-              src="../images/icons/scopus.svg" alt="Scopus" width="16" height="16" /></a>
+              src="../images/icons/scopus.svg" alt="Scopus" width="16" height="16" /></a></p>
         <h4>Smart Genetics Resource Management and Utilization symposium</h4>
         <p>Dr. Ryza A. Priatama (<em>Korea Institute of Fusion Energy &amp; Institute of Plasma Technology, South
             Korea</em>) <a href="https://www.scopus.com/authid/detail.uri?authorId=55533993800" target=""
@@ -294,7 +287,7 @@
           <b>Secretary:</b>
           Ratih Fitria Putri, Ph.D. <a
             href="https://www.scopus.com/authid/detail.uri?authorId=55574444300&amp;origin=recordPage" target=""
-            rel="noopener"><img src="../images/icons/scopus.svg" alt="Scopus" width="16" height="16" /></a><br>
+            rel="noopener"><img src="../images/icons/scopus.svg" alt="Scopus" width="16" height="16" /></a></p><br>
           Muhammad Rafieiy, S.Si.
         </p>
         <h2 class="pt-3" id="program">Program Committee</h2>
@@ -311,7 +304,7 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer px-5 pb-2" style="background-color: #f4fcf7; box-shadow: 0 1px 2px 0 #e1e5ea;">
+  <footer class="footer pb-2" style="background-color: #f4fcf7; box-shadow: 0 1px 2px 0 #e1e5ea;">
     <div class="container">
       <!-- Sponsors -->
       <div class="text-center pt-3">
@@ -328,55 +321,57 @@
         <div class="col-md-3">
           <h6 style="color: #1f73cc">The conference</h6>
           <p>
-            <a href="../article/about.html">About</a><br>
-            <a href="../../icosia-2022/index.html#important-dates">Important dates</a><br>
-            <a href="../article/speakers.html">Speakers</a><br>
-            <a href="../article/about.html#advisor">Committees</a><br>
-            <a href="../article/fees.html">Fee</a><br>
-            <a href="../article/programs.html">Program</a><br>
+            <a href="about.html">About</a><br>
+            <a href="../index.html#important-dates">Important dates</a><br>
+            <a href="speakers.html">Speakers</a><br>
+            <a href="about.html#advisor">Committees</a><br>
+            <a href="fee.html">Fee</a><br>
+            <a href="program.html">Program</a><br>
             <a href="https://icosiaugm.tawk.help/">Help</a>
           </p>
         </div>
         <div class="col-md-3">
           <h6 style="color: #1f73cc">Satellite events</h6>
           <p>
-            <a href="../article/agricultural-big-data-analysis.html">ABDA symposium</a><br>
-            <a href="../article/agricultural-geography.html">AG symposium</a><br>
-            <a href="../article/land-and-environmental-management.html">LEM symposium</a><br>
-            <a href="../article/precision-nutrition-technology.html">PNT symposium</a><br>
-            <a href="../article/smart-and-precision-farming.html">SPF symposium</a><br>
-            <a href="../article/smart-genetics-resource-management-and-utilization.html">SGRMU symposium</a><br>
-            <a href="../article/sustainable-food-production.html">SFP symposium</a>
+            <a href="agricultural-big-data-analysis.html">ABDA symposium</a><br>
+            <a href="agricultural-geography.html">AG symposium</a><br>
+            <a href="land-and-environmental-management.html">LEM symposium</a><br>
+            <a href="precision-nutrition-technology.html">PNT symposium</a><br>
+            <a href="smart-and-precision-farming.html">SPF symposium</a><br>
+            <a href="smart-genetics-resource-management-and-utilization.html">SGRMU symposium</a><br>
+            <a href="sustainable-food-production.html">SFP symposium</a>
           </p>
         </div>
         <div class="col-md-3">
           <h6 style="color: #1f73cc">Author information</h6>
           <p>
-            <a href="../article/author-guidelines.html">Author guidelines</a><br>
-            <a href="../article/editorial-policy.html">Editorial policy</a><br>
-            <a href="../article/submissions.html">Submission</a><br>
+            <a href="author-guidelines.html">Author guidelines</a><br>
+            <a href="editorial-policy.html">Editorial policy</a><br>
+            <a href="submission.html">Submission</a><br>
           </p>
           <h6 style="color: #1f73cc">Explore</h6>
           <p>
-            <a href="../article/venue.html">Conference venue</a><br>
+            <a href="venue.html">Conference venue</a><br>
             <a href="https://ugm.ac.id/en" target="_blank">Universitas Gadjah Mada</a><br>
-            <a href="https://visitingjogja.jogjaprov.go.id/" target="_blank">The city of Yogyakarta</a>
+            <a href="https://visitingjogja.jogjaprov.go.id/" target="_blank">City of Yogyakarta</a>
           </p>
         </div>
         <div class="col-md-3">
           <h6 style="color: #1f73cc">Connect</h6>
           <p>
-            <i class="fa fa-envelope"></i> <a href="mailto:icosia@ugm.ac.id" target="_blank">icosia@ugm.ac.id</a><br>
-            <i class=" fa fa-twitter"></i> <a href="https://www.twitter.com/icosiaugm"
-              target="_blank">@icosiaugm</a><br>
-            <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/icosiaugm"
+            <i class="fa-solid fa-envelope"></i> <a href="mailto:icosia@ugm.ac.id"
+              target="_blank">icosia@ugm.ac.id</a><br>
+            <i class="fa-brands fa-square-twitter"></i> <a href="https://www.twitter.com/icosiaugm"
               target="_blank">icosiaugm</a><br>
-            <i class="fa fa-twitter"></i> <a href="https://www.twitter.com/bpp_ugm" target="_blank">@BPP_UGM</a><br>
-            <i class="fa fa-instagram"></i> <a href="https://www.instagram.com/ugmyogyakarta"
-              target="_blank">@UGMYogyakarta</a>
+            <i class="fa-brands fa-square-instagram"></i> <a href="https://www.instagram.com/icosiaugm"
+              target="_blank">icosiaugm</a><br>
+            <i class="fa-brands fa-square-twitter"></i> <a href="https://www.twitter.com/bpp_ugm"
+              target="_blank">BPP_UGM</a><br>
+            <i class="fa-brands fa-square-instagram"></i> <a href="https://www.instagram.com/publikasiugm"
+              target="_blank">publikasiugm</a>
           </p>
           <p>
-            <a href="https://icosiaugm.tawk.help/" target="_blank"><button type="button" class="btn btn-success"><i
+            <a href="https://icosiaugm.tawk.help/" target="_blank"><button type="button" class="btn btn-primary"><i
                   class="fa-solid fa-headset"></i>&nbsp;&nbsp;ICoSIA UGM Helpdesk</button></a>
           </p>
         </div>
@@ -385,7 +380,7 @@
       <hr class="mx-auto my-3" style="border-color: #ccc;">
 
       <!-- Credits -->
-      <p class="text-muted text-justify">The International Conference on Smart and Innovative Technology 2022,
+      <p class="credit text-muted text-justify">The International Conference on Smart and Innovative Technology 2022,
         organized by <a target="_blank" href="https://publikasi.ugm.ac.id/en/">BPP UGM</a>.
         Website has been redeveloped by <a target="_blank" href="https://www.linkedin.com/in/rafieiy/">Rafieiy</a> using
         <a target="_blank" href="https://getbootstrap.com/docs/5.3">Bootstrap v5.3.0-alpha3</a>,
