Update the data

--- a/article/program.html
+++ b/article/program.html
@@ -145,7 +145,7 @@
                 </tr>
                 <tr>
                   <td>08:40</td>
-                  <td><a href="speakers.html"><b>Prof. Josaphat Tetuko Sri Sumantyo, Ph.D</b></a><br>Chiba University, Japan & Universitas Sebelas Maret, Indonesia</td>
+                  <td><a href="speakers.html#keynote-speakers"><b>Prof. Josaphat Tetuko Sri Sumantyo, Ph.D</b></a><br>Chiba University, Japan & Universitas Sebelas Maret, Indonesia</td>
                   <td>Ballroom</td>
                 </tr>
                 <tr class="table-warning">
@@ -158,7 +158,7 @@
                 </tr>
                 <tr>
                   <td>09:45</td>
-                  <td><a href="speakers.html"><b>Prof. Dr. Ir. Djagal Wiseso Marseno, M.Agr.</b></a><br>Universitas Gadjah Mada, Indonesia</td>
+                  <td><a href="speakers.html#keynote-speakers"><b>Prof. Dr. Ir. Djagal Wiseso Marseno, M.Agr.</b></a><br>Universitas Gadjah Mada, Indonesia</td>
                   <td>Ballroom</td>
                 </tr>
                 <tr>
@@ -181,12 +181,12 @@
                 </tr>
                 <tr>
                   <td></td>
-                  <td><b>Agricultural Geography Symposium<br><a href="speakers.html">Prof. Dr. Muh Aris Marfai, S.Si., M.Sc.</b></a><br>Indonesian Geospatial Information Agency, Indonesia</td>
+                  <td><b>Agricultural Geography Symposium<br><a href="speakers.html#invited-speakers">Prof. Dr. Muh Aris Marfai, S.Si., M.Sc.</b></a><br>Indonesian Geospatial Information Agency, Indonesia</td>
                   <td style="border-bottom-width:0px;">Ballroom</td>
                 </tr>
                 <tr>
                   <td>11:15</td>
-                  <td><b>Land and Environmental Management Symposium<br><a href="speakers.html">Prof. Budiman Minasny</b></a><br>Sydney University, Australia</td>
+                  <td><b>Land and Environmental Management Symposium<br><a href="speakers.html#invited-speakers">Prof. Budiman Minasny</b></a><br>Sydney University, Australia</td>
                   <td></td>
                 </tr>
                 <tr class="table-warning">
@@ -214,17 +214,17 @@
                 </tr>
                 <tr>
                   <td></td>
-                  <td><b>Sustainable Food Production Symposium<br><a href="speakers.html">Taira Miyahara, Ph.D.</b></a><br>Chiba University, Japan</td>
+                  <td><b>Sustainable Food Production Symposium<br><a href="speakers.html#invited-speakers">Taira Miyahara, Ph.D.</b></a><br>Chiba University, Japan</td>
                   <td style="border-bottom-width:0px;">Ballroom</td>
                 </tr>
                 <tr>
                   <td>13:40</td>
-                  <td><b>Smart Genetics Resource Management and Utilization Symposium<br><a href="speakers.html">Prof. Dr. Ir. Bambang Sugiharto, M.Agr.Sc.</b></a><br>Universitas Jember, Indonesia</td>
+                  <td><b>Smart Genetics Resource Management and Utilization Symposium<br><a href="speakers.html#invited-speakers">Prof. Dr. Ir. Bambang Sugiharto, M.Agr.Sc.</b></a><br>Universitas Jember, Indonesia</td>
                   <td style="border-bottom-width:0px;"></td>
                 </tr>
                 <tr>
                   <td>14:20</td>
-                  <td><b>Agricultural Big Data Analysis Symposium<br><a href="speakers.html">Vincentius Surya Kurnia Adi, PhD</b></a><br>National Chung Hsing University, Taiwan</td>
+                  <td><b>Agricultural Big Data Analysis Symposium<br><a href="speakers.html#invited-speakers">Vincentius Surya Kurnia Adi, PhD</b></a><br>National Chung Hsing University, Taiwan</td>
                   <td style="border-bottom-width:0px;"></td>
                 </tr>
                 <tr class="table-warning">
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                   <td>15:15</td>
-                  <td><a href="speakers.html"><b>Prof. Wouter Saeys</b></a><br>KU Leuven, Belgium</td>
+                  <td><a href="speakers.html#keynote-speakers"><b>Prof. Wouter Saeys</b></a><br>KU Leuven, Belgium</td>
                   <td>Ballroom</td>
                 </tr>
                 <tr>
@@ -260,12 +260,12 @@
                 </tr>
                 <tr>
                   <td style="border-bottom-width:0px;"></td>
-                  <td><b>Precision Nutrition Technology Symposium<br><a href="speakers.html">Prof. Dr. Ir. Endang Sutriswati Rahayu, M.S.</b></a><br>Universitas Gadjah Mada, Indonesia</td>
+                  <td><b>Precision Nutrition Technology Symposium<br><a href="speakers.html#invited-speakers">Prof. Dr. Ir. Endang Sutriswati Rahayu, M.S.</b></a><br>Universitas Gadjah Mada, Indonesia</td>
                   <td style="border-bottom-width:0px;">Ballroom</td>
                 </tr>
                 <tr>
                   <td>16:45–17:25</td>
-                  <td><b>Smart and Precision Farming Symposium<br><a href="speakers.html">Husnain, S.P., M.P., M.Sc, Ph.D.</b></a><br>Kementerian Pertanian, Indonesia</td>
+                  <td><b>Smart and Precision Farming Symposium<br><a href="speakers.html#invited-speakers">Husnain, S.P., M.P., M.Sc, Ph.D.</b></a><br>Kementerian Pertanian, Indonesia</td>
                   <td></td>
                 </tr>
               </tbody>
