--- a/article/speakers.html
+++ b/article/speakers.html
@@ -93,7 +93,7 @@
   
   <!-- CONTENTS -->
   <section class="container">
-    <h1>Keynote <span style="color: #1f73cc;">speakers</span></h1>
+    <h1 id="keynote-speakers">Keynote <span style="color: #1f73cc;">speakers</span></h1>
     <div class="row">
       <!-- Josaphat Sumantyo -->
       <div class="col-md-2 d-flex align-items-end flex-column py-3">
@@ -126,7 +126,7 @@
       </div>
     </div>
     <hr>
-    <h1>Invited <span style="color: #1f73cc;">speakers</span></h1>
+    <h1 id="invited-speakers">Invited <span style="color: #1f73cc;">speakers</span></h1>
     <div class="row">
       <!-- Bambang Sugiharto -->
       <div class="col-md-2 d-flex align-items-end flex-column py-3">
