add jumbotron credit

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
         <a target="_blank" href="https://github.com/bppugm/icosia-2022">unless otherwise stated</a>.
         UGM and ICoSIA logos © Universitas Gadjah Mada. Atlantis Press logo © Atlantis Press. Clarivate Analytics logo ©
         Clarivate Analytics. 
+        Jumbotron image by <a href="https://www.freepik.com/free-vector/watercolor-nature-background_26945331.htm" target="_blank">pikisuperstar</a> (<a href="https://www.freepikcompany.com/privacy#priv-rights" target="_blank">Free to use</a>). 
         Icons by <a target="_blank" href="https://fontawesome.com/docs/changelog/">Font Awesome 6.4.0</a>
         (Fonticons Inc. <a target="_blank" href="https://fontawesome.com/license"><i
             class="fab fa-creative-commons-pd-alt"></i></a>).
