edit submission page

--- a/article/submission.html
+++ b/article/submission.html
@@ -391,7 +391,7 @@
                   <!-- next step -->
                   <div class="alert alert-success">
                     <h6>Your presentation document has been submitted!</h6>
-                    <p style="margin-bottom: 0px;">Now, you need to present on the conference day on November 22&ndash;23. If you cannot present on the conference day, you manuscript will be considered no-shows in accordance with the non-presented paper policy.</p>
+                    <p style="margin-bottom: 0px;">Now, you need to present on the conference day on November 22&ndash;23. If you cannot present on the conference day, your manuscript will be considered no-shows in accordance with the non-presented paper policy.</p>
                   </div>
                 </div>
               </div>
@@ -409,7 +409,7 @@
               </h2>
               <div id="panelsStayOpen-collapse8" class="accordion-collapse collapse show">
                 <div class="accordion-body">
-                  <p>After your final manuscript and presentation document has been submitted, you also need to attend
+                  <p>After your camera-ready manuscript and presentation document has been submitted, you also need to attend
                     the conference for a live Q&amp;A session. Please note that you need to make time on November 22-23
                     in the <a href="venue.html">Grand Rohan Jogja</a>, because the
                     conference program cannot be rescheduled and must be in accordance with the program given by the
