--- a/article/editorial-policy.html
+++ b/article/editorial-policy.html
@@ -128,7 +128,7 @@
 <a href="https://publicationethics.org/resources/code-conduct" target="_blank" rel="noopener" class="btn btn-primary">Read code of conduct</a>
 
 <h2 class="pt-3">Attending in the conference</h2>
-<p>After your final manuscript and presentation document has been submitted, you also need to attend the conference for a live Q&amp;A session. Please note that you need to make time on November 22-23 in the <a href="https://icosia.ugm.ac.id/2022-2/venue/" rel="noopener" target="_blank">Grand Rohan Jogja</a>, because the conference program cannot be rescheduled and must be in accordance with the program given by the committee.</p>
+<p>After your final manuscript and presentation document has been submitted, you also need to attend the conference for a live Q&amp;A session. Please note that you need to make time on November 22-23 in the <a href="venue.html">Grand Rohan Jogja</a>, because the conference program cannot be rescheduled and must be in accordance with the program given by the committee.</p>
 <p>If you are unable to attend for any reason, make sure that one of the co-authors can replace your presence. Change of attendance will result in a change of name listed in the certificate which we will send by email. Unpresented papers will be removed from publication and automatically declared as rejected.</p>
     </div>
   </section>
